kubernetes/workloads/wealthfolio/resources/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: wealthfolio
  namespace: wealthfolio
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`wealthfolio.dominiksiejak.pl`)
      kind: Rule
      middlewares:
        - name: crowdsec-bouncer
          namespace: traefik
        - name: secure-headers
          namespace: traefik
      services:
        - name: wealthfolio
          port: 8088
  tls: {}
